--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12">
-						<div class="owl-carousel clients-slider">
+						<div class="owl-carousel clients-slider owl-theme owl-loaded">
 							<div class="single-clients">
 								<img src="img/BMTU.png" alt="#">
 							</div>
