--- a/contact.html
+++ b/contact.html
@@ -273,8 +273,8 @@
 							<div class="single-info">
 								<i class="icofont icofont-ui-call"></i>
 								<div class="content">
-									<h3>+(000) 1234 56789</h3>
-									<p>info@company.com</p>
+									<h3>+91 7337583335</h3>
+									<p>marukondamahesh27@gmail.com</p>
 								</div>
 							</div>
 						</div>
