--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,7 @@
 		<script src="js/wow.min.js"></script>
 		<!-- Magnific Popup JS -->
 		<script src="js/jquery.magnific-popup.min.js"></script>
+	    <script src="js/waypoint.min.js"></script>
 		<!-- Counter Up CDN JS -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 		<!-- Bootstrap JS -->
