--- a/F&B.html
+++ b/F&B.html
@@ -138,7 +138,7 @@ gtag('config', 'G-F3DZE7QJ95');
 											<a href="javascript:void(0)">MENU</a>
 											<ul class="submenu-lv-1">
 												<li class="">
-													<a href="https://drive.google.com/file/d/19eJ9i5ydUveSWya08yq57f3t5xpuNox7/view?usp=sharing" target="_blank">Daily Food</a>
+													<a href="menu.html" target="_blank">Daily Food</a>
 												</li>
 												<li class="">
 													<a href="/collections/a-la-carte">Order Food</a>
@@ -531,7 +531,7 @@ gtag('config', 'G-F3DZE7QJ95');
 	</div>
 </div>							</div>
 							<div class="text-left view-order">
-								<a href="https://drive.google.com/file/d/19eJ9i5ydUveSWya08yq57f3t5xpuNox7/view?usp=sharing"  target="_blank" class="btn btn-order">View Menu</a>
+								<a href="menu.html"  target="_blank" class="btn btn-order">View Menu</a>
 							</div>
 						</div>
 					</div>
@@ -862,7 +862,7 @@ gtag('config', 'G-F3DZE7QJ95');
 						<div class="footer-content">					
 							<ul class="d-flex flex-wrap">
 								<li><a href="https://www.invi.com.vn/">Introduction</a></li>
-								<li><a href="https://drive.google.com/file/d/19eJ9i5ydUveSWya08yq57f3t5xpuNox7/view?usp=sharing">Menu</a></li>
+								<li><a href="menu.html">Menu</a></li>
 								<li><a href="https://zalo.me/0359773397">Contact</a></li>
 							</ul>
 						</div>
@@ -919,7 +919,7 @@ gtag('config', 'G-F3DZE7QJ95');
 					<span class="toggle-sub-menu"><i class="fa fa-plus"></i></span>
 					<ul class="sub-menu-mobile-1">
 						<li>
-							<a href="https://drive.google.com/file/d/19eJ9i5ydUveSWya08yq57f3t5xpuNox7/view?usp=sharing" target="_blank">Daily Food</a>
+							<a href="menu.html" target="_blank">Daily Food</a>
 						</li>
 						<li>
 							<a href="/collections/a-la-carte">Order Food</a>
