--- a/F&B.html
+++ b/F&B.html
@@ -17,6 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<title>
 			Invi Food & Beverage
 		</title>
+	<script src="//static.fliphtml5.com/web/js/plugin/LightBox/js/fliphtml5-light-box-api-min.js"></script>
 <meta name="description" content="Invi F&B serves traditional and innovative Indian dishes. The atmosphere is casual while the modern and upscale design contributes to a relaxing and enjoyable dining experience.">
 		<link rel="canonical" href="https://www.invi.com.vn/">
 		<link rel="alternate" href="https://www.invi.com.vn/" hreflang="vi-vn">	
