--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
  <img
   src="https://online.fliphtml5.com/jaebl/xdwr/files/shot.jpg"
   data-rel="fh5-light-box-demo"
-  data-href="https://online.fliphtml5.com/jaebl/xdwr/"
+  data-href="https://online.fliphtml5.com/jaebl/ogyy/"
   data-width="400" data-height="250" data-title=""
  >
 </body>
