--- a/F&B.html
+++ b/F&B.html
@@ -139,7 +139,7 @@ gtag('config', 'G-F3DZE7QJ95');
 											<a href="javascript:void(0)">MENU</a>
 											<ul class="submenu-lv-1">
 												<li class="">
-													<a href="menu.html" target="_blank">Daily Food</a>
+													<a href="https://online.fliphtml5.com/jaebl/ogyy/" target="_blank">Daily Food</a>
 												</li>
 												<li class="">
 													<a href="/collections/a-la-carte">Order Food</a>
@@ -920,7 +920,7 @@ gtag('config', 'G-F3DZE7QJ95');
 					<span class="toggle-sub-menu"><i class="fa fa-plus"></i></span>
 					<ul class="sub-menu-mobile-1">
 						<li>
-							<a href="menu.html" target="_blank">Daily Food</a>
+							<a href="https://online.fliphtml5.com/jaebl/ogyy/" target="_blank">Daily Food</a>
 						</li>
 						<li>
 							<a href="/collections/a-la-carte">Order Food</a>
