--- a/F&B.html
+++ b/F&B.html
@@ -1132,7 +1132,7 @@ window.debounce=function(e,i,t){var s;return function(){var l=this,o=arguments,a
 		min-width:110px;
 		margin-bottom:10px;
 		display:block;
-		background: #db1a2a;
+		background: #1A76D1;
 		font-weight: bold;
 		outline: none;
 		border: unset;
