--- a/F&B.html
+++ b/F&B.html
@@ -151,7 +151,7 @@ gtag('config', 'G-F3DZE7QJ95');
 											<a href="https://zalo.me/0359773397">CONTACT</a>
 										</li>
 										<li id="booking-header">
-											<a href="/pages/order">PRE-ORDER</a>
+											<a href="/https://zalo.me/0359773397">PRE-ORDER</a>
 										</li>
 										<li id="booking-header2">
 											<a href="https://forms.gle/zrWzGtB1RoGVVc4f9">MEMBERSHIP</a>
@@ -903,7 +903,7 @@ gtag('config', 'G-F3DZE7QJ95');
 <div id="menu-mobile-wrapper">
 	<div class="menu-mobile--inner">
 		<div class="menu-mobile--logo">
-			<a href="/pages/order">
+			<a href="/https://zalo.me/0359773397">
 				To Order Pages
 				<svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" size="20" height="20" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path></svg>
 			</a>
@@ -935,7 +935,7 @@ gtag('config', 'G-F3DZE7QJ95');
 				</li>
 
 				<li id="booking-header">
-					<a href="/pages/order">Pre-Order</a>
+					<a href="/https://zalo.me/0359773397">Pre-Order</a>
 				</li>
 				<li id="booking-header">
 					<a href="tel:0899 855 101">Membership</a>
