--- a/F&B.html
+++ b/F&B.html
@@ -532,7 +532,7 @@ gtag('config', 'G-F3DZE7QJ95');
 	</div>
 </div>							</div>
 							<div class="text-left view-order">
-								<a href="menu.html"  target="_blank" class="btn btn-order">View Menu</a>
+								<a href="https://online.fliphtml5.com/jaebl/ogyy/"  target="_blank" class="btn btn-order">View Menu</a>
 							</div>
 						</div>
 					</div>
