--- a/F&B.html
+++ b/F&B.html
@@ -863,7 +863,7 @@ gtag('config', 'G-F3DZE7QJ95');
 						<div class="footer-content">					
 							<ul class="d-flex flex-wrap">
 								<li><a href="https://www.invi.com.vn/">Introduction</a></li>
-								<li><a href="menu.html">Menu</a></li>
+								<li><a href="https://online.fliphtml5.com/jaebl/ogyy/">Menu</a></li>
 								<li><a href="https://zalo.me/0359773397">Contact</a></li>
 							</ul>
 						</div>
