--- a/F&B.html
+++ b/F&B.html
@@ -570,7 +570,7 @@ gtag('config', 'G-F3DZE7QJ95');
 								</div>
 							</div>
 							<div class="text-left view-order">
-								<a href="tel:0899 855101" class="btn btn-order">PRE_ORDER</a>
+								<a href="tel:0359773397" class="btn btn-order">PRE_ORDER</a>
 							</div>
 						</div>
 					</div>
