--- a/F&B.html
+++ b/F&B.html
@@ -136,15 +136,8 @@ gtag('config', 'G-F3DZE7QJ95');
 								<nav id="menu-header">
 									<ul class="inner-main-menu d-flex align-items-center">
 										<li class="hasSub ">
-											<a href="javascript:void(0)">MENU</a>
-											<ul class="submenu-lv-1">
-												<li class="">
-													<a href="https://online.fliphtml5.com/jaebl/ogyy/" target="_blank">Daily Food</a>
-												</li>
-												<li class="">
-													<a href="/collections/a-la-carte">Order Food</a>
-												</li>
-											</ul>
+											<a href="https://online.fliphtml5.com/jaebl/ogyy/">MENU</a>
+						
 										</li>
 										
 										<li class="noSub ">
