--- a/F&B.html
+++ b/F&B.html
@@ -874,7 +874,7 @@ gtag('config', 'G-F3DZE7QJ95');
 						</div>
 						<div class="footer-content">	
 							<div class="footer-content--fanpage">			
-								<div class="fb-page" data-href="https://www.facebook.com/invi.edu" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">	</div>
+								<div class="fb-page" data-href="https://www.facebook.com/invi.indianfood" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">	</div>
 							</div>
 						</div>
 					</div>
