--- a/Menu.html
+++ b/Menu.html
@@ -45,9 +45,9 @@
 <body>
 	<div id="tmpLoading" style="width: 100%; height: 100%; position: absolute; z-index: -2;background:#323232;"></div>
 	
-	<script type="text/javascript" src="js/config.js"></script>
-	<script type="text/javascript" src="js/slideJS.js"></script>
-	<script type="text/javascript" src="js/LoadingJS.js"></script>
-	<script type="text/javascript" src="js/resource_skeleton.js"></script>
+	<script type="text/javascript" src="Menu/js/config.js"></script>
+	<script type="text/javascript" src="Menu/js/slideJS.js"></script>
+	<script type="text/javascript" src="Menu/js/LoadingJS.js"></script>
+	<script type="text/javascript" src="Menu/js/resource_skeleton.js"></script>
 
 </body></html>
