--- a/F&B.html
+++ b/F&B.html
@@ -136,7 +136,7 @@ gtag('config', 'G-F3DZE7QJ95');
 								<nav id="menu-header">
 									<ul class="inner-main-menu d-flex align-items-center">
 										<li class="hasSub ">
-											<a href="https://online.fliphtml5.com/jaebl/ogyy/" target="_blank">MENU</a>
+											<a href="menu.html" target="_blank">MENU</a>
 						
 										</li>
 										
@@ -525,7 +525,7 @@ gtag('config', 'G-F3DZE7QJ95');
 	</div>
 </div>							</div>
 							<div class="text-left view-order">
-								<a href="https://online.fliphtml5.com/jaebl/ogyy/"  target="_blank" class="btn btn-order">View Menu</a>
+								<a href="menu.html"  target="_blank" class="btn btn-order">View Menu</a>
 							</div>
 						</div>
 					</div>
@@ -856,7 +856,7 @@ gtag('config', 'G-F3DZE7QJ95');
 						<div class="footer-content">					
 							<ul class="d-flex flex-wrap">
 								<li><a href="https://www.invi.com.vn/" target="_blank">Introduction</a></li>
-								<li><a href="https://online.fliphtml5.com/jaebl/ogyy/" target="_blank">Menu</a></li>
+								<li><a href="menu.html" target="_blank">Menu</a></li>
 								<li><a href="https://zalo.me/0359773397" target="_blank">Contact</a></li>
 							</ul>
 						</div>
@@ -913,7 +913,7 @@ gtag('config', 'G-F3DZE7QJ95');
 					<span class="toggle-sub-menu"><i class="fa fa-plus"></i></span>
 					<ul class="sub-menu-mobile-1">
 						<li>
-							<a href="https://online.fliphtml5.com/jaebl/ogyy/" target="_blank">Daily Food</a>
+							<a href="menu.html" target="_blank">Daily Food</a>
 						</li>
 						<li>
 							<a href="https://zalo.me/0359773397" target="_blank">Order Food</a>
