--- a/F&B.html
+++ b/F&B.html
@@ -530,36 +530,7 @@ gtag('config', 'G-F3DZE7QJ95');
 						</div>
 					</div>
 					<div class="col-12 col-md-6 bg-right-order">
-						<div class="content-right-order">
-							<div class="section-head">
-								<h2 class="color-white">
-									PRE-ORDER
-								</h2>
-								<h4>
-									NOW OPENING
-								</h4>
-							</div>
-							<div class="section-content-info">
-								
-							</div>
-							<div class="section-time-work">
-								<div class="box-img-time-work ratiobox lazyloaded" data-expand="-1">
-									<img class="lazyautosizes lazyloaded" data-sizes="auto" data-src="//theme.hstatic.net/200000662729/1001050504/14/img_home_main_order_right_2.png?v=33" data-lowsrc="//theme.hstatic.net/200000662729/1001050504/14/img_home_main_order_right_2.png?v=33" src="f&b/images/img_home_main_order_right_2.png" alt="THỜI GIAN NHÀ HÀNG MỞ CỬA" sizes="540px"><img class="ls-blur-up-img ls-blur-up-loaded ls-original-loaded ls-inview" src="f&b/images/img_home_main_order_right_2.png" alt="" aria-hidden="true">
-								</div>
-								<div class="box-time-work">
-									<h4>
-										OPENING HOURS
-									</h4>
-									<div class="outer-info-time">
-										<div class="info-time">
-											<span>Mon - Saturday</span>
-											<span></span>
-										</div>
-										<div class="info-time">
-											<span>6:00 AM - 9:00 PM</span>
-											<span></span>
-										</div>
-									</div>
+						<div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/jaebl/ogyy/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
 								</div>
 							</div>
 							<div class="text-left view-order">
