--- a/F&B.html
+++ b/F&B.html
@@ -410,10 +410,10 @@ gtag('config', 'G-F3DZE7QJ95');
 						<div class="content-left-order">
 							<div class="section-head">
 								<h2>
-									DAILY MENU
+									BEST SELLER
 								</h2>
 								<h4>
-									MONDAY
+									People choices
 								</h4>
 							</div>
 							<div class="time-for-order">
