--- a/F&B.html
+++ b/F&B.html
@@ -422,29 +422,29 @@ gtag('config', 'G-F3DZE7QJ95');
 	<div class="box-img-order">
 		<a title="Premium Omakase" class="image-resize ratiobox lazyloaded" data-expand="-1">
 			<picture>
-				<source media="(max-width: 480px)" data-srcset="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" srcset="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" sizes="540px">
-				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" srcset="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" sizes="540px">
-				<source media="(min-width: 768px)" data-srcset="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" srcset="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" sizes="540px">
-				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="//f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" data-lowsrc="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" src="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" alt=" Premium Omakase " sizes="540px">
-			</picture><img class="ls-blur-up-img ls-original-loaded ls-blur-up-loaded ls-inview" src="f&b/images/477f19a5-c75b-4522-8412-4c855de4b996_210f27f47d3841fc9b6503f6802353f2_grande.jpg" alt="" aria-hidden="true">
+				<source media="(max-width: 480px)" data-srcset="f&b/images/Chicken biryani.jpg" srcset="f&b/images/Chicken biryani.jpg" sizes="540px">
+				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/Chicken biryani.jpg" srcset="f&b/images/Chicken biryani.jpg" sizes="540px">
+				<source media="(min-width: 768px)" data-srcset="f&b/images/Chicken biryani.jpg" srcset="f&b/images/Chicken biryani.jpg" sizes="540px">
+				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="//f&b/images/Chicken biryani.jpg" data-lowsrc="f&b/images/Chicken biryani.jpg" src="f&b/images/Chicken biryani.jpg" alt=" Chicken Biryani " sizes="540px">
+			</picture><img class="ls-blur-up-img ls-original-loaded ls-blur-up-loaded ls-inview" src="f&b/images/Chicken biryani.jpg" alt="" aria-hidden="true">
 		</a>
 	</div>
 	<div class="box-info-order">
 		<div class="inner-box-info-order-1">
 			<h3 class="name-order">
 				<a>
-					Aloo Puri
+					Chicken Biryani
 				</a>
 			</h3>
 			
 			<div class="price-order">
 				
-				<span>35,000₫</span>
+				<span>50,000₫</span>
 			</div>
 			
 		</div>
 		<div class="inner-box-info-order-2">
-			Aloo Puri is basically the definition of a perfect morning breakfast: warmly spiced potato curry with crispy Indian fried bread
+			Chicken Biryani is a delicious traditional dish, typical of Indian cuisine, famous for its rich flavor from chicken, basmati rice and traditional spices.
 		</div>
 	</div>
 </div>
