--- a/F&B.html
+++ b/F&B.html
@@ -422,11 +422,11 @@ gtag('config', 'G-F3DZE7QJ95');
 	<div class="box-img-order">
 		<a title="Premium Omakase" class="image-resize ratiobox lazyloaded" data-expand="-1">
 			<picture>
-				<source media="(max-width: 480px)" data-srcset="f&b/images/Chicken biryani.jpg" srcset="f&b/images/Chicken biryani.jpg" sizes="540px">
-				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/Chicken biryani.jpg" srcset="f&b/images/Chicken biryani.jpg" sizes="540px">
-				<source media="(min-width: 768px)" data-srcset="f&b/images/Chicken biryani.jpg" srcset="f&b/images/Chicken biryani.jpg" sizes="540px">
-				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="//f&b/images/Chicken biryani.jpg" data-lowsrc="f&b/images/Chicken biryani.jpg" src="f&b/images/Chicken biryani.jpg" alt=" Chicken Biryani " sizes="540px">
-			</picture><img class="ls-blur-up-img ls-original-loaded ls-blur-up-loaded ls-inview" src="f&b/images/Chicken biryani.jpg" alt="" aria-hidden="true">
+				<source media="(max-width: 480px)" data-srcset="f&b/images/chicken biryani.jpg" srcset="f&b/images/chicken biryani.jpg" sizes="540px">
+				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/chicken biryani.jpg" srcset="f&b/images/chicken biryani.jpg" sizes="540px">
+				<source media="(min-width: 768px)" data-srcset="f&b/images/chicken biryani.jpg" srcset="f&b/images/chicken biryani.jpg" sizes="540px">
+				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="//f&b/images/chicken biryani.jpg" data-lowsrc="f&b/images/chicken biryani.jpg" src="f&b/images/chicken biryani.jpg" alt=" Chicken Biryani " sizes="540px">
+			</picture><img class="ls-blur-up-img ls-original-loaded ls-blur-up-loaded ls-inview" src="f&b/images/chicken biryani.jpg" alt="" aria-hidden="true">
 		</a>
 	</div>
 	<div class="box-info-order">
