--- a/F&B.html
+++ b/F&B.html
@@ -459,10 +459,10 @@ gtag('config', 'G-F3DZE7QJ95');
 	<div class="box-img-order">
 		<a title="Omakase Đặc Biệt" class="image-resize ratiobox lazyload" data-expand="-1">
 			<picture>
-				<source media="(max-width: 480px)" data-srcset="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" srcset="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" sizes="540px">
-				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" srcset="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" sizes="540px">
-				<source media="(min-width: 768px)" data-srcset="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" srcset="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" sizes="540px">
-				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" data-lowsrc="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" src="f&b/images/706ced78-cb94-4ff9-ac76-abf4cdfe0642_91cdd38bd07c401487d4805049dbe835_grande.jpg" alt=" Omakase Đặc Biệt " sizes="540px">
+				<source media="(max-width: 480px)" data-srcset="f&b/images/Chole bhature.jpg" srcset="f&b/images/Chole bhature.jpg" sizes="540px">
+				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/Chole bhature.jpg" srcset="f&b/images/Chole bhature.jpg" sizes="540px">
+				<source media="(min-width: 768px)" data-srcset="f&b/images/Chole bhature.jpg" srcset="f&b/images/Chole bhature.jpg" sizes="540px">
+				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="f&b/images/Chole bhature.jpg" data-lowsrc="f&b/images/Chole bhature.jpg" src="f&b/images/Chole bhature.jpg" alt=" Chole Bhature " sizes="540px">
 	
 		</a>
 	</div>
@@ -470,18 +470,18 @@ gtag('config', 'G-F3DZE7QJ95');
 		<div class="inner-box-info-order-1">
 			<h3 class="name-order">
 				<a>
-					Tomato Rice
+					Chole Bhature
 				</a>
 			</h3>
 			
 			<div class="price-order">
 				
-				<span>35,000₫</span>
+				<span>40,000₫</span>
 			</div>
 			
 		</div>
 		<div class="inner-box-info-order-2">
-			Tomato Rice is a simple South Indian meal where rice is cooked with lots of tomatoes, fresh herbs, whole spices & ground spices...
+			This is a combination of two dishes: cho - a spicy chickpea curry and bhature - a fried bread made from wheat flour. Popular throughout North India.
 		</div>
 	</div>
 </div>
@@ -496,10 +496,10 @@ gtag('config', 'G-F3DZE7QJ95');
 	<div class="box-img-order">
 		<a title="Seasonal Omakase" class="image-resize ratiobox lazyload" data-expand="-1">
 			<picture>
-				<source media="(max-width: 480px)" data-srcset="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" srcset="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" sizes="540px">
-				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" srcset="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" sizes="540px">
-				<source media="(min-width: 768px)" data-srcset="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" srcset="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" sizes="540px">
-				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" data-lowsrc="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" src="f&b/images/bf2bc5d3-94a2-4fcc-852d-533bd5c8dbe6_b32f699ce231458b86ea2315b322243a_grande.jpg" alt=" Seasonal Omakase " sizes="540px">
+				<source media="(max-width: 480px)" data-srcset="f&b/images/Aloo Paratha.jpg" srcset="f&b/images/Aloo Paratha.jpg" sizes="540px">
+				<source media="(min-width: 481px) and (max-width: 767px)" data-srcset="f&b/images/Aloo Paratha.jpg" srcset="f&b/images/Aloo Paratha.jpg" sizes="540px">
+				<source media="(min-width: 768px)" data-srcset="f&b/images/Aloo Paratha.jpg" srcset="f&b/images/Aloo Paratha.jpg" sizes="540px">
+				<img class="img-loop lazyautosizes lazyloaded" data-sizes="auto" data-src="f&b/images/Aloo Paratha.jpg" data-lowsrc="f&b/images/Aloo Paratha.jpg" src="f&b/images/Aloo Paratha.jpg" alt=" Seasonal Omakase " sizes="540px">
 
 		</a>
 	</div>
@@ -507,18 +507,18 @@ gtag('config', 'G-F3DZE7QJ95');
 		<div class="inner-box-info-order-1">
 			<h3 class="name-order">
 				<a>
-					Chapati/ Brinjal & Aloo
+					Aloo Paratha
 				</a>
 			</h3>
 			
 			<div class="price-order">
 				
-				<span>35,000₫</span>
+				<span>25,000₫</span>
 			</div>
 			
 		</div>
 		<div class="inner-box-info-order-2">
-			Tender spiced chunks of eggplants and potatoes in a simple comforting spice base, this Pakistani classic Aloo Baingan or Baingan Aloo is an easy one pot potato and aubergine dish that is so satisfying.
+			Aloo Paratha are Indian Breakfast flatbreads made with whole wheat flour, boiled potatoes, spices & herbs bring satifying to people
 
 
 		</div>
