--- a/F&B.html
+++ b/F&B.html
@@ -530,7 +530,7 @@ gtag('config', 'G-F3DZE7QJ95');
 						</div>
 					</div>
 					<div class="col-12 col-md-6 bg-right-order">
-						<div class="content-left-order"> <div style="position:relative;padding-top:max(100%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/jaebl/ogyy/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+						<div class="content-right-order"> <div style="position:relative;padding-top:max(100%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/jaebl/ogyy/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
 								</div>
 							</div>
 						
