--- a/index.html
+++ b/index.html
@@ -1114,9 +1114,8 @@
 								<h2>Open Hours</h2>
 								
 								<ul class="time-sidual">
-									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-18.30</span></li>
-									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
+									<li class="day">Monday - Friday <span>8:00AM - 5:00PM</span></li>
+									<li class="day">Saturday - Sunday <span>9:00AM - 12:30PM</span></li>				
 								</ul>
 							</div>
 						</div>
