--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
 								<div class="main-menu">
 									<nav class="navigation">
 										<ul class="nav menu">
-											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
+											<li ><a href="#">Home <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="index.html">About Us</a></li>
 												</ul>
@@ -169,7 +169,7 @@
 <!--													<li><a href="blog-single.html">Blog Details</a></li>-->
 <!--												</ul>-->
 <!--											</li>-->
-											<li><a href="contact.html">Contact Us</a></li>
+											<li class="active"><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</nav>
 								</div>
