--- a/contact.html
+++ b/contact.html
@@ -284,8 +284,8 @@
 							<div class="single-info">
 								<i class="icofont-google-map"></i>
 								<div class="content">
-									<h3>2 Fir e Brigade Road</h3>
-									<p>Chittagonj, Lakshmipur</p>
+									<h3>28 Street 51, Hiep Binh Chanh, Thu Duc</h3>
+									<p>Ho Chi Minh city, Vietnam</p>
 								</div>
 							</div>
 						</div>
@@ -296,7 +296,7 @@
 								<i class="icofont icofont-wall-clock"></i>
 								<div class="content">
 									<h3>Mon - Sat: 8am - 5pm</h3>
-									<p>Sunday Closed</p>
+									<h3>Sunday Closed</h3>
 								</div>
 							</div>
 						</div>
