--- a/contact.html
+++ b/contact.html
@@ -113,12 +113,12 @@
 						<div class="col-lg-6 col-md-5 col-12">
 							<!-- Contact -->
 							<ul class="top-link">
-								<li><a href="#">Home</a></li>
-								<li><a href="#">Services</a></li>
-								<li><a href="#">Why US</a></li>
-								<li><a href="#">Gallery</a></li>
-								<li><a href="#">F&B</a></li>
-								<li><a href="#">FAQ</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html">Services</a></li>
+								<li><a href="index.html">Why US</a></li>
+								<li><a href="index.html">Gallery</a></li>
+								<li><a href="F&B.html">F&B</a></li>
+								<li><a href="index.html">FAQ</a></li>
 							</ul>
 							<!-- End Contact -->
 						</div>
@@ -162,7 +162,7 @@
 											<li><a href="index.html">Services </a></li>
 											<li><a href="index.html">Why Us </a></li>
 											<li><a href="index.html">Gallery </a></li>
-											<li><a href="#">F&B </a></li>
+											<li><a href="F&B.html">F&B </a></li>
 											<li><a href="#">FAQ </a></li>
 <!--											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>-->
 <!--												<ul class="dropdown">-->
