--- a/contact.html
+++ b/contact.html
@@ -319,11 +319,9 @@
 								<p>We're a company that focuses on establishing long-term relationships with universities and students</p>
 								<!-- Social -->
 								<ul class="social">
-									<li><a href="#"><i class="icofont-facebook"></i></a></li>
-									<li><a href="#"><i class="icofont-google-plus"></i></a></li>
-									<li><a href="#"><i class="icofont-twitter"></i></a></li>
-									<li><a href="#"><i class="icofont-vimeo"></i></a></li>
-									<li><a href="#"><i class="icofont-pinterest"></i></a></li>
+									<li><a href="https://www.facebook.com/invi.edu"><i class="icofont-facebook"></i></a></li>
+									<li><a href="https://www.instagram.com/invigroups/?hl=en"><i class="icofont-instagram"></i></a></li>
+									<li><a href="https://www.youtube.com/@mbbsinvietnam2025"><i class="icofont-youtube"></i></a></li>
 								</ul>
 								<!-- End Social -->
 							</div>
@@ -358,9 +356,7 @@
 								<h2>Open Hours</h2>
 								<p>Times may vary depending on region.</p>
 								<ul class="time-sidual">
-									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-18.30</span></li>
-									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
+									<li class="day">Monday - Saturday <span>8:00AM-5:00PM</span></li>																		
 								</ul>
 							</div>
 						</div>
