--- a/404.html
+++ b/404.html
@@ -61,21 +61,7 @@
         </div>
         <!-- End Preloader -->
 		
-		<!-- Get Pro Button -->
-		<ul class="pro-features">
-			<a class="get-pro" href="#">Get Pro</a>
-			<li class="big-title">Pro Version Available on Themeforest</li>
-			<li class="title">Pro Version Features</li>
-			<li>2+ premade home pages</li>
-			<li>20+ html pages</li>
-			<li>Color Plate With 12+ Colors</li>
-			<li>Sticky Header / Sticky Filters</li>
-			<li>Working Contact Form With Google Map</li>
-			<div class="button">
-				<a href="http://preview.themeforest.net/item/mediplus-medical-and-doctor-html-template/full_screen_preview/26665910?_ga=2.145092285.888558928.1591971968-344530658.1588061879" target="_blank" class="btn">Pro Version Demo</a>
-				<a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
-			</div>
-		</ul>
+	
 	
 		<!-- Header Area -->
 		<header class="header" >
@@ -96,8 +82,8 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
+								<li><i class="fa fa-phone"></i>+91 7337583335, +84 0916760422</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:mahesh.invi@gmail.com">mahesh.invi@gmail.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -169,7 +155,9 @@
 						<!-- Error Inner -->
 						<div class="error-inner">
 							<h1>404<span>Oop's  sorry we can't find that page!</span></h1>
-							<p>Aenean eget sollicitudin lorem, et pretium felis. Nullam euismod diam libero, sed dapibus leo laoreet ut. Suspendisse potenti. Phasellus urna lacus</p>
+							<p>Contact Us</p>
+							<p>WhatsApp: +91 7337583335, +84 0916760422</p>
+							<p>Email: mahesh.invi@gmail.com</p>
 							<form class="search-form">
 								<input placeholder="Search from Here" type="text">
 								<button class="btn" type="submit"><i class="fa fa-search"></i></button>
